--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,6 +15,9 @@ on:
 jobs:
   test:
     name: Tests
+    defaults:
+      run:
+        working-directory: Chainbridge
     strategy:
       matrix:
         go-version: [1.15.x]
@@ -47,6 +50,9 @@ jobs:
           make test
   e2e:
     name: E2E Tests
+    defaults:
+      run:
+        working-directory: Chainbridge
     strategy:
       matrix:
         go-version: [ 1.15.x ]
@@ -78,6 +84,9 @@ jobs:
           make test-e2e
   lint:
     name: Lint and License Headers
+    defaults:
+      run:
+        working-directory: Chainbridge
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
