Quick update to enviromnet variables to reflect config from env

--- a/ChainBridge/.env.example
+++ b/ChainBridge/.env.example
@@ -1,3 +1,4 @@
 # TODO: Move to Secrets Storage
 export FORTE_BRIDGE_RELAYER_KEYSTORE_PASSWORD=spacebacon
 export KEYSTORE_PASSWORD=${FORTE_BRIDGE_RELAYER_KEYSTORE_PASSWORD}
+export FORTE_RELAYER_CONFIG_FROM_ENV=true
